# model-training

./: LICENSE  README.md  predict_resnet_labelme.py  predict_vgg244.py  predict_vgg_labelme.py  pyproject.toml  train_module_resnet_labelme.py  train_module_unet_labelme.py  train_module_vgg_244.py
CustomYOLOv5/: compute_loss.py  detect.py  labelme_dataset.py  train.py  yolov5_multilabel.py
EfficientDet/: train.py
ResNet18/: detect.py  resnet18_multilabel.py  train.py
UNet/: train.py
VGG/: custom_vgg.py  detect.py  detect_512.py  train.py  vgg_for_multilabel.py
models/ResNet18/: labelme_dataset.py  train_module.py
scripts/: YOLOv5.py  labelme2YOLOv5.py
tools/: load_labels.py
utils/: config.py  labelme_dataset.py
